--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -4,16 +4,25 @@ body {
     color: #333;
 }
 
+
 /* ==========================================================================
 Hide ng-cloak on page load, https://docs.angularjs.org/api/ng/directive/ngCloak
 ========================================================================== */
-[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+
+[ng\:cloak],
+[ng-cloak],
+[data-ng-cloak],
+[x-ng-cloak],
+.ng-cloak,
+.x-ng-cloak {
     display: none !important;
 }
+
 
 /* ==========================================================================
 Development Ribbon
 ========================================================================== */
+
 .ribbon {
     background-color: #a00;
     box-shadow: 0 0 10px #888;
@@ -47,24 +56,30 @@ Development Ribbon
     pointer-events: none;
 }
 
+
 /* ==========================================================================
 Version number in navbar
 ========================================================================== */
+
 .navbar-version {
     font-size: 10px;
     color: #444;
 }
 
+
 /* ==========================================================================
 navbar text
 ========================================================================== */
+
 .navbar-default .navbar-brand {
     color: #444;
 }
 
+
 /* ==========================================================================
 Browser Upgrade Prompt
 ========================================================================== */
+
 .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
@@ -72,11 +87,14 @@ Browser Upgrade Prompt
     padding: 0.2em 0;
 }
 
+
 /* ==========================================================================
 Logo styles
 ========================================================================== */
+
 .navbar-brand.logo {
     padding: 5px 15px;
+    color: white;
 }
 
 .logo .logo-img {
@@ -84,9 +102,11 @@ Logo styles
     display: inline-block;
 }
 
+
 /* ==========================================================================
 Main page styles
 ========================================================================== */
+
 .hero-unit {
     margin: 50px auto 0 auto;
     width: 300px;
@@ -112,23 +132,26 @@ Main page styles
     background-size: contain;
 }
 
+
 /* wait autoprefixer update to allow simple generation of high pixel density media query */
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and ( min--moz-device-pixel-ratio: 2),
+only screen and ( -o-min-device-pixel-ratio: 2/1),
+only screen and ( min-device-pixel-ratio: 2),
+only screen and ( min-resolution: 192dpi),
+only screen and ( min-resolution: 2dppx) {
     .hipster {
         background: url("../images/hipster2x.png") no-repeat center top;
         background-size: contain;
     }
 }
 
+
 /* ==========================================================================
 Generic styles
 ========================================================================== */
+
 .error {
     color: white;
     background-color: red;
@@ -140,40 +163,72 @@ Generic styles
 
 .break {
     white-space: normal;
-    word-break:break-all;
+    word-break: break-all;
 }
 
-.voffset  { margin-top: 2px; }
-.voffset1 { margin-top: 5px; }
-.voffset2 { margin-top: 10px; }
-.voffset3 { margin-top: 15px; }
-.voffset4 { margin-top: 30px; }
-.voffset5 { margin-top: 40px; }
-.voffset6 { margin-top: 60px; }
-.voffset7 { margin-top: 80px; }
-.voffset8 { margin-top: 100px; }
-.voffset9 { margin-top: 150px; }
+.voffset {
+    margin-top: 2px;
+}
+
+.voffset1 {
+    margin-top: 5px;
+}
+
+.voffset2 {
+    margin-top: 10px;
+}
+
+.voffset3 {
+    margin-top: 15px;
+}
+
+.voffset4 {
+    margin-top: 30px;
+}
+
+.voffset5 {
+    margin-top: 40px;
+}
+
+.voffset6 {
+    margin-top: 60px;
+}
+
+.voffset7 {
+    margin-top: 80px;
+}
+
+.voffset8 {
+    margin-top: 100px;
+}
+
+.voffset9 {
+    margin-top: 150px;
+}
 
 .readonly {
     background-color: #eee;
     opacity: 1;
 }
 
+
 /* ==========================================================================
 make sure browsers use the pointer cursor for anchors, even with no href
 ========================================================================== */
-a {
-    color: #1c0cf5;
-}
 
-a:hover, .hand, [jh-sort-by] {
+a:hover,
+.hand,
+[jh-sort-by] {
     cursor: pointer;
 }
+
 
 /* ==========================================================================
 Metrics and Health styles
 ========================================================================== */
-#threadDump .popover, #healthCheck .popover {
+
+#threadDump .popover,
+#healthCheck .popover {
     top: inherit;
     display: block;
     font-size: 10px;
@@ -188,37 +243,43 @@ Metrics and Health styles
     min-width: 400px;
 }
 
+
 /* ==========================================================================
 start Password strength bar style
 ========================================================================== */
+
 ul#strengthBar {
-    display:inline;
-    list-style:none;
-    margin:0;
-    margin-left:15px;
-    padding:0;
-    vertical-align:2px;
+    display: inline;
+    list-style: none;
+    margin: 0;
+    margin-left: 15px;
+    padding: 0;
+    vertical-align: 2px;
 }
 
 .point:last {
-    margin:0 !important;
+    margin: 0 !important;
 }
+
 .point {
-    background:#DDD;
-    border-radius:2px;
-    display:inline-block;
-    height:5px;
-    margin-right:1px;
-    width:20px;
+    background: #DDD;
+    border-radius: 2px;
+    display: inline-block;
+    height: 5px;
+    margin-right: 1px;
+    width: 20px;
 }
+
 
 /* ==========================================================================
 Custom alerts for notification
 ========================================================================== */
-.alerts .alert{
+
+.alerts .alert {
     text-overflow: ellipsis;
 }
-.alert pre{
+
+.alert pre {
     background: none;
     border: none;
     font: inherit;
@@ -258,85 +319,193 @@ Custom alerts for notification
     }
 }
 
+
 /* ==========================================================================
 entity tables helpers
 ========================================================================== */
+
+
 /* Remove Bootstrap padding from the element
    http://stackoverflow.com/questions/19562903/remove-padding-from-columns-in-bootstrap-3 */
-.no-padding-left { padding-left: 0 !important; }
-.no-padding-right { padding-right: 0 !important; }
-.no-padding-top { padding-top: 0 !important; }
-.no-padding-bottom { padding-bottom: 0 !important; }
-.no-padding { padding: 0 !important; }
+
+.no-padding-left {
+    padding-left: 0 !important;
+}
+
+.no-padding-right {
+    padding-right: 0 !important;
+}
+
+.no-padding-top {
+    padding-top: 0 !important;
+}
+
+.no-padding-bottom {
+    padding-bottom: 0 !important;
+}
+
+.no-padding {
+    padding: 0 !important;
+}
+
 
 /* bootstrap 3 input-group 100% width
    http://stackoverflow.com/questions/23436430/bootstrap-3-input-group-100-width */
-.width-min { width: 1% !important; }
+
+.width-min {
+    width: 1% !important;
+}
+
 
 /* Makes toolbar not wrap on smaller screens
  http://www.sketchingwithcss.com/samplechapter/cheatsheet.html#right */
+
 .flex-btn-group-container {
-   display: -webkit-flex;
-   display: flex;
-   -webkit-flex-direction: row;
-   flex-direction: row;
-   -webkit-justify-content: flex-end;
-   justify-content: flex-end;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    -webkit-justify-content: flex-end;
+    justify-content: flex-end;
 }
 
-.jh-table > tbody > tr > td {
+.jh-table>tbody>tr>td {
     /* Align text in td vertically (top aligned by Bootstrap) */
     vertical-align: middle;
 }
 
-.jh-table > thead > tr > th > .glyphicon-sort, .jh-table > thead > tr > th > .glyphicon-sort-by-attributes, .jh-table > thead > tr > th > .glyphicon-sort-by-attributes-alt {
+.jh-table>thead>tr>th>.glyphicon-sort,
+.jh-table>thead>tr>th>.glyphicon-sort-by-attributes,
+.jh-table>thead>tr>th>.glyphicon-sort-by-attributes-alt {
     /* less visible sorting icons */
     opacity: 0.5;
 }
 
-.jh-table > thead > tr > th > .glyphicon-sort:hover, .jh-table > thead > tr > th > .glyphicon-sort-by-attributes:hover, .jh-table > thead > tr > th > .glyphicon-sort-by-attributes-alt:hover {
+.jh-table>thead>tr>th>.glyphicon-sort:hover,
+.jh-table>thead>tr>th>.glyphicon-sort-by-attributes:hover,
+.jh-table>thead>tr>th>.glyphicon-sort-by-attributes-alt:hover {
     /* full visible sorting icons and pointer when mouse is over them */
     opacity: 1;
     cursor: pointer;
 }
 
+
 /* ==========================================================================
 entity detail page css
 ========================================================================== */
-.dl-horizontal.jh-entity-details > dd {
+
+.dl-horizontal.jh-entity-details>dd {
     margin-bottom: 15px;
 }
 
 @media screen and (min-width: 768px) {
-    .dl-horizontal.jh-entity-details > dt {
+    .dl-horizontal.jh-entity-details>dt {
         margin-bottom: 15px;
     }
-
-    .dl-horizontal.jh-entity-details > dd {
+    .dl-horizontal.jh-entity-details>dd {
         border-bottom: 1px solid #eee;
         padding-left: 180px;
         margin-left: 0;
     }
 }
 
+
 /* ==========================================================================
 ui bootstrap tweaks
 ========================================================================== */
-.nav, .pagination, .carousel, .panel-title a {
+
+.nav,
+.pagination,
+.carousel,
+.panel-title a {
     cursor: pointer;
 }
 
-.datetime-picker-dropdown > li.date-picker-menu div > table .btn-default,
-.uib-datepicker-popup  > li > div.uib-datepicker > table .btn-default {
+.datetime-picker-dropdown>li.date-picker-menu div>table .btn-default,
+.uib-datepicker-popup>li>div.uib-datepicker>table .btn-default {
     border: 0;
 }
 
-.datetime-picker-dropdown > li.date-picker-menu div > table:focus,
-.uib-datepicker-popup  > li > div.uib-datepicker > table:focus {
+.datetime-picker-dropdown>li.date-picker-menu div>table:focus,
+.uib-datepicker-popup>li>div.uib-datepicker>table:focus {
     outline: none;
 }
 
+.home-navbar {
+    background-color: #d73434;
+}
 
+.carousel-inner {
+    max-height: 450px !important;
+}
+
+.carousel-img {
+    width: 100%;
+}
+
+.navbar-link {
+    color: white !important;
+}
+
+.navbar-link:hover {
+    color: red !important;
+}
+
+.navbar-link:active {
+    color: red !important;
+}
+
+.navbar-link:focus {
+    color: red !important;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-right: 2%;
+    border-radius: 5px;
+    border-bottom: 2px solid red;
+}
+
+.card:hover {
+    box-shadow: 0 16px 24px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-img {
+    border-radius: 5px 5px 0 0;
+    width: 100%;
+    height: 254px;
+}
+
+.card-body {
+    padding: 2px 16px;
+}
+
+.offers-header {
+    color: red;
+    font-size: 13pt;
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+
+.shopCarousel {
+    max-height: 350px !important;
+}
+
+.card-header {
+    color: #fd2111;
+    font-size: 14pt;
+    margin-top: 4%;
+    margin-bottom: 1%;
+}
+
+.modal-alignment {
+    width: 359px;
+}
+
+.home-navbar-blue {
+    background-color: rgb(14, 18, 240);
+}
 
 
 /* jhipster-needle-css-add-main JHipster will add new css style */
