--- a/src/main/webapp/content/css/main.css
+++ b/src/main/webapp/content/css/main.css
@@ -503,8 +503,8 @@ ui bootstrap tweaks
     width: 359px;
 }
 
-.home-navbar-blue {
-    background-color: rgb(14, 18, 240);
+.home-navbar-blue {
+  background-color:blue;
 }
 
 
