--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar home-navbar" role="navigation">
+<nav class="navbar home-navbar-blue" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle " ng-click="vm.toggleNavbar()">
