update App name

--- a/src/main/webapp/app/layouts/navbar/navbar.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.html
@@ -9,7 +9,7 @@
             </button>
             <a class="navbar-brand logo" ui-sref="home" ng-click="vm.collapseNavbar()">
                 <img class="logo-img" src="content/images/logo1.jpg" alt="logo1.jpg"></img>
-                <span>Sample Application</span>
+                <span>Shopping Application</span>
             </a>
         </div>
         <div class="navbar-collapse" uib-collapse="vm.isNavbarCollapsed" ng-switch="vm.isAuthenticated()">
